[package]
name = "four_dimentions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
eframe = { version = "0.21.3", features = ["wgpu"] }
encase = { version = "0.6.0", features = ["cgmath"] }
